release notes databene commons 0.5.33
-------------------------------------


Enhancements
------------
- StringUtil: New method replaceOptionalSuffix()
- XMLUtil:
  - new method getChildElementAtPath()
  - new method resolveEntities()
  - improved namespace support


Bug Fixes
---------
- FeatureAccessor: Tolerating absence of generic get(String) method